--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     font-family: Georgia, serif;
     color: #2B1C8D;
     line-height: 1.56;
-
+    box-sizing: border-box;
   }
   
   .wrapper {
@@ -15,7 +15,9 @@
   .container-one {
     width: 50%;
     margin: 60px 80px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .container-two {
     width: 50%;
@@ -25,8 +27,9 @@
   .image {
     display: block;
     width: 100%;
-    margin: auto;
     padding: 50px 0;
+    max-height: 800px;
+    max-width: 800px;
   }
   .contact-icon {
     font-size: 30px;
