--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
   .image {
     display: block;
     width: 100%;
-    padding: 50px 0;
+    padding: 30px 0 50px 0;
     max-height: 600px;
     max-width: 600px;
   }
